# DanceDance-BE

./: .coveragerc  .gitignore  .gitmessage.txt  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CI.yml
challenges/: admin.py  functions.py  models.py  serializers.py  urls.py  views.py
config/: root_urls.py  settings.py
dance_dance/challenges/: admin.py  apps.py  functions.py  models.py  serializers.py  urls.py  views.py
dance_dance/challenges/migrations/: 0001_initial.py  0002_alter_originalvideo_table_and_more.py  0002_rename_youtube_video_id_originalvideo_youtube_video_url_and_more.py  0003_alter_tag_parent_tag_id.py  0003_alter_uservideo_score_alter_uservideo_score_list.py  0004_originalvideo_challenge_name_and_more.py  0004_uservideo_likes_uservideolikeslog_user_id.py  0005_alter_uservideo_likes.py  0005_remove_originalvideo_challenge_name_and_more.py  0006_alter_originalvideo_hits_alter_tag_parent_tag_id.py  0007_originalvideo_video_file_path.py  0008_rename_motion_data_url_originalvideo_motion_data_path.py  0009_alter_originalvideo_table.py  0010_alter_originalvideotag_table.py  0011_alter_originalvideo_channel_name_and_more.py  0012_alter_originalvideo_channel_name_and_more.py  0013_alter_uservideo_score.py  0014_originalvideo_platform_type_id_and_more.py  0015_uservideo_tags.py
dance_dance/common/: apps.py  constants.py  response.py  utils.py
dance_dance/users/: apps.py  kakao_oauth.py  managers.py  models.py  serializers.py  urls.py  validations.py  views.py
(+7 files in other folders)
